# doubao-input-for-linux

./: .gitignore  CLAUDE.md  LICENSE  NOTICE  README.md  pyproject.toml  start.sh
debian/: changelog  control  copyright  doubao-input.desktop  doubao-input.service  install  postinst  rules
docs/: design.md  x11-gtk3-port.md
packaging/: build-deb.sh
src/doubao_input/: __main__.py  app.py
src/doubao_input/doubao/: asr_client.py  audio_capture.py  config.py  login_window.py  params_store.py  transcription.py
src/doubao_input/inject/: injector.py
src/doubao_input/login/resources/: inject-websocket.js
src/doubao_input/trigger/: evdev_ptt.py
src/doubao_input/ui/: control_window.py  overlay.py  tray.py
tests/probe/: P5_login.py  P6_asr.py
